<resources>
    <string name="app_name">QuwiClient</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="Active">Active</string>
    <string name="Inactive">Inactive</string>

    <string name="UserName">vitaliibondtest@gmail.com</string>
    <string name="UserPassw">vitaliibondtest</string>

    <color name="colorDarkGrey">#788B91</color>
    <string name="action_exit">Exit</string>
</resources>